--- a/Week1_Python_Basics.ipynb
+++ b/Week1_Python_Basics.ipynb
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "id": "d5b57518",
    "metadata": {},
    "outputs": [
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "id": "4391e952",
    "metadata": {},
    "outputs": [
@@ -252,7 +252,7 @@
     }
    ],
    "source": [
-    "# Lesson 7: Error Handlung (try/except)\n",
+    "# Lesson 7: Error Handling (try/except)\n",
     "\n",
     "try: \n",
     "    V = float(input(\"Enter volume (L): \"))\n",
@@ -285,7 +285,7 @@
     "import math\n",
     "\n",
     "#Logarithmic calculation\n",
-    "x = 10 \n",
+    "x = 10\n",
     "print(\"Natural log of 10:\", round(math.log(x),3))\n",
     "#Square root of diffusivity\n",
     "D = 1.6e-5\n",
@@ -294,12 +294,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "b2e6a495",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "For A = 1000000000000.0, Ea = 75000.0 J/mol, T = 350.0 K\n",
+      "The reaction rate constant (k) =  6.404 s^-1\n"
+     ]
+    }
+   ],
    "source": [
-    "# Mini Project 2: "
+    "# Mini Project 2: hemical Reaction Rate Estimator\n",
+    "import math \n",
+    "\n",
+    "def arrchenius():\n",
+    "    R = 8.314 # J / mol.K\n",
+    "\n",
+    "    # Error handling for zero or negative values\n",
+    "    try: \n",
+    "        # Ask the user for values A , Ea , T\n",
+    "        A = float(input(\"Enter frequency factor (A): \"))\n",
+    "        Ea = float(input(\"Enter activation energy (Ea in J/mol): \"))\n",
+    "        T = float(input(\"Enter temperature (T in K): \"))\n",
+    "\n",
+    "        if A <= 0 or Ea <= 0 or T <= 0:\n",
+    "            raise ValueError(\"A, Ea, and T must be greater than zero.\")\n",
+    "        \n",
+    "        k = A * math.exp(- Ea / (R * T))\n",
+    "\n",
+    "        # print(f\"Reaction rate constant (k): {k:.3e} s^-1\")\n",
+    "        print(f\"For A = {A}, Ea = {Ea} J/mol, T = {T} K\")\n",
+    "        print(\"The reaction rate constant (k) = \", round(k, 3), \"s^-1\")\n",
+    "\n",
+    "    except ValueError as e:\n",
+    "        print(\"Error:\", e)\n",
+    "arrchenius()"
    ]
   }
  ],
