--- a/Week2_Data_and_Visualization.ipynb
+++ b/Week2_Data_and_Visualization.ipynb
@@ -40,7 +40,20 @@
    "execution_count": null,
    "id": "92ffbc0a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Temperature readings (K): [300 310 320 330 340 350 360 370 380 390]\n",
+      "Temperature readings (C): [ 26.85  36.85  46.85  56.85  66.85  76.85  86.85  96.85 106.85 116.85]\n",
+      "Reaction rate constants (k): ['4.49e-02', '1.21e-01', '3.06e-01', '7.33e-01', '1.67e+00', '3.62e+00', '7.53e+00', '1.50e+01', '2.90e+01', '5.40e+01'] s^-1\n",
+      "Mean reaction rate: 1.12e+01 s^-1\n",
+      "Max reaction rate: 5.40e+01 s^-1 at T = 390 K\n",
+      "Min k reaction rate: 5.40e+01 s^-1\n"
+     ]
+    }
+   ],
    "source": [
     "# Mini Project 3: Batch Reactor Energy Monitoring System\n",
     "# Your Tasks:\n",
@@ -54,7 +67,122 @@
     "# Handle errors (e.g., negative temperatures or division by zero)\n",
     "\n",
     "import numpy as np\n",
-    "import math as m "
+    "import math as m \n",
+    "\n",
+    "def calculate_reaction_rate(T, A = 1e12, Ea = 75000):\n",
+    "    \"\"\"Calculate rate constant using Arrhenius equation.\"\"\"\n",
+    "\n",
+    "    R = 8.134 # J/(mol*K)\n",
+    "    # Error handling for zero or negative values\n",
+    "    try:\n",
+    "        if T <= 0:\n",
+    "            raise ValueError(\"T must be greater than zero.\")\n",
+    "        \n",
+    "        # Calculate k\n",
+    "        k = A * m.exp(-Ea / (R * T))\n",
+    "        return k \n",
+    "    except ValueError as e:\n",
+    "        print(f\"Error at T = {T}: K:\", e)\n",
+    "        return None\n",
+    "    \n",
+    "# Store temperature in Kelvin and convert to Celsius\n",
+    "temps_K = np.array([300, 310, 320, 330, 340, 350, 360, 370, 380, 390])\n",
+    "temps_C = temps_K - 273.15\n",
+    "\n",
+    "# Calculate k store in array \n",
+    "k_values = []\n",
+    "\n",
+    "for T in temps_K:\n",
+    "    k = calculate_reaction_rate(T)\n",
+    "    if k is not None:\n",
+    "        k_values.append(k)\n",
+    "    else:\n",
+    "        k_values.append(0)\n",
+    "\n",
+    "k_array = np.array(k_values)\n",
+    "\n",
+    "# Print summary \n",
+    "print(\"Temperature readings (K):\", temps_K)\n",
+    "print(\"Temperature readings (C):\", temps_C)\n",
+    "\n",
+    "#k into 2 decimal places\n",
+    "formatted_k = [f\"{k:.2e}\" for k in k_array]\n",
+    "print(\"Reaction rate constants (k):\", formatted_k, \"s^-1\")\n",
+    "# print(\"Reaction rate constants (k):\", \", \".join(f\"{k:.2e}\" for k in k_array), \"s^-1\")\n",
+    "\n",
+    "print(f\"Mean reaction rate: {np.mean(k_array):.2e} s^-1\")\n",
+    "print(f\"Max reaction rate: {np.max(k_array):.2e} s^-1 at T = {temps_K[np.argmax(k_array)]} K\")\n",
+    "print(f\"Min k reaction rate: {np.max(k_array):.2e} s^-1\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "2bbf77c2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Data frame of compounds:\n",
+      "    Compound Formula  Boiling Point (C)  Molar Mass (g/mol)\n",
+      "0   Ammonia     NH3             -33.34               17.03\n",
+      "1  Methanol   CH3OH              64.70               32.04\n",
+      "2   Ethanol  C2H5OH              78.37               46.07\n",
+      "3     Water     H2O             100.00               18.02\n",
+      "0    -33.34\n",
+      "1     64.70\n",
+      "2     78.37\n",
+      "3    100.00\n",
+      "Name: Boiling Point (C), dtype: float64\n",
+      "Summary statistics for numeric columns:\n",
+      "       Boiling Point (C)  Molar Mass (g/mol)\n",
+      "count           4.000000            4.000000\n",
+      "mean           52.432500           28.290000\n",
+      "std            58.999532           13.692472\n",
+      "min           -33.340000           17.030000\n",
+      "25%            40.190000           17.772500\n",
+      "50%            71.535000           25.030000\n",
+      "75%            83.777500           35.547500\n",
+      "max           100.000000           46.070000\n",
+      "Compounds with molar mass > 17 g/mol:\n",
+      "   Compound Formula  Boiling Point (C)  Molar Mass (g/mol)\n",
+      "0  Ammonia     NH3             -33.34               17.03\n",
+      "3    Water     H2O             100.00               18.02\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Week 2: Day 2 - Pandas (Think Excel for Python)\n",
+    "\n",
+    "# Pandas is a powerful library for data manipulation and analysis\n",
+    "# It provides data structures like Series and DataFrame for handling structured data\n",
+    "# Pandas is often used for data exploration, cleaning, and manipulation\n",
+    "\n",
+    "import pandas as pd\n",
+    "\n",
+    "# Create DataFrame manually\n",
+    "data = {\n",
+    "    \"Compound\": [\"Ammonia\", \"Methanol\", \"Ethanol\", \"Water\"],\n",
+    "    \"Formula\": [\"NH3\", \"CH3OH\", \"C2H5OH\", \"H2O\"],\n",
+    "    \"Boiling Point (C)\": [-33.34, 64.7, 78.37, 100],\n",
+    "    \"Molar Mass (g/mol)\": [17.03, 32.04, 46.07, 18.02],\n",
+    "}\n",
+    "\n",
+    "df = pd.DataFrame(data)\n",
+    "print(\"Data frame of compounds:\\n\", df)\n",
+    "\n",
+    "# Access a column \n",
+    "print(df[\"Boiling Point (C)\"])\n",
+    "\n",
+    "# Describe summary stats for can only for numeric columns\n",
+    "print(\"Summary statistics for numeric columns:\")\n",
+    "print(df.describe())\n",
+    "\n",
+    "# Filter example: Show compounds with molar mass > 17 g/mol\n",
+    "molar_mass_filter = df[df[\"Molar Mass (g/mol)\"] < 30]\n",
+    "print(\"Compounds with molar mass > 17 g/mol:\\n\", molar_mass_filter)"
    ]
   }
  ],
