week 3 done for phase 1 and mini project w3

--- a/Week2_Data_and_Visualization.ipynb
+++ b/Week2_Data_and_Visualization.ipynb
@@ -234,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "id": "5227277b",
    "metadata": {},
    "outputs": [
@@ -254,6 +254,7 @@
     "# Seaborn is built on top of Matplotlib and provides a high-level interface for drawing\n",
     "import seaborn as sns\n",
     "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
     "\n",
     "# Sample DataFrame\n",
     "data = {\n",
