week4 day 3 done next Logistic regression

--- a/Week4_Supervised_Learning.ipynb
+++ b/Week4_Supervised_Learning.ipynb
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "0212ee02",
    "metadata": {},
    "outputs": [
@@ -199,7 +199,13 @@
      "text": [
       "Equation: Conc_A(mol/L) = -0.015 * Time(min) + 0.997\n",
       "SLope(k): -0.015\n",
-      "y-intercept(b): 0.997\n"
+      "y-intercept(b): 0.997\n",
+      "\n",
+      " Evaluation Metrics: Linear Regression: Conc_A vs Time\n",
+      "MAE: 0.010\n",
+      "MSE: 0.000\n",
+      "R2: 0.998\n",
+      "RMSE: 0.011\n"
      ]
     },
     {
@@ -218,16 +224,23 @@
      "text": [
       "Equation: Conc_B(mol/L) = 0.015 * Temp(K) + -4.416\n",
       "SLope(k): 0.015\n",
-      "y-intercept(b): -4.416\n"
+      "y-intercept(b): -4.416\n",
+      "\n",
+      " Evaluation Metrics: Linear Regression: Conc_B vs Temp\n",
+      "MAE: 0.009\n",
+      "MSE: 0.000\n",
+      "R2: 0.998\n",
+      "RMSE: 0.011\n"
      ]
     }
    ],
    "source": [
-    "# ORGANIZED CODE \n",
+    "# ORGANIZED CODE + Day 3 (Week 4)\n",
     "\n",
     "import numpy as np \n",
     "import pandas as pd\n",
     "from sklearn.linear_model import LinearRegression\n",
+    "from sklearn.metrics import mean_squared_error, mean_absolute_error, r2_score\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
     "# Load CSV and cleaned\n",
@@ -259,12 +272,30 @@
     "    print(f'Equation: {y_col} = {model.coef_[0][0]:.3f} * {X_col} + {model.intercept_[0]:.3f}')\n",
     "    print(f'SLope(k): {model.coef_[0][0]:.3f}')\n",
     "    print(f'y-intercept(b): {model.intercept_[0]:.3f}')\n",
+    "\n",
+    "    # Evaluation metrics\n",
+    "    mae = mean_absolute_error(y, y_predict)\n",
+    "    mse = mean_squared_error(y, y_predict)\n",
+    "    r2 = r2_score(y, y_predict)\n",
+    "    rmse = np.sqrt(mse)\n",
+    "\n",
+    "    print(f'\\n Evaluation Metrics: {title}')\n",
+    "    print(f'MAE: {mae:.3f}')\n",
+    "    print(f'MSE: {mse:.3f}')\n",
+    "    print(f'R2: {r2:.3f}')\n",
+    "    print(f'RMSE: {rmse:.3f}')\n",
     "    return model\n",
     "\n",
     "# run linear regression for Conc_A vs Time \n",
     "model_A = run_regression('Time(min)', 'Conc_A(mol/L)', 'Time(min)', 'Conc_A(mol/L)', 'Linear Regression: Conc_A vs Time')\n",
     "\n",
-    "model_B = run_regression('Temp(K)', 'Conc_B(mol/L)', 'Temp(K)', 'Conc_B(mol/L)', 'Linear Regression: Conc_B vs Temp')"
+    "model_B = run_regression('Temp(K)', 'Conc_B(mol/L)', 'Temp(K)', 'Conc_B(mol/L)', 'Linear Regression: Conc_B vs Temp')\n",
+    "\n",
+    "# In this case, y_col is actual values and y_predict is predicted values\n",
+    "# MAE = 0.010 mol/L \n",
+    "# MSE = 0 mol/L so the model is perfect\n",
+    "# R2 = 0.998 so the model is perfect if 0 then the model is not perfect\n",
+    "# RMSE = 0.011 mol/L rmse is the square root of mse meaning smaller is better \n"
    ]
   }
  ],
